Fixing missing CleanArchitecture.WebApi.xml file requiered by Swagger

--- a/src/CleanArchitecture.WebApi/CleanArchitecture.WebApi.csproj
+++ b/src/CleanArchitecture.WebApi/CleanArchitecture.WebApi.csproj
@@ -25,5 +25,11 @@
     <ProjectReference Include="..\CleanArchitecture.Infrastructure\CleanArchitecture.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="CleanArchitecture.WebApi.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 
 </Project>
