--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,10 @@ pool:
 
 variables:
   buildConfiguration: 'Release'
+  major: 1
+  minor: 0
+  patch: $(Build.BuildID)
+  buildVersion: $(major).$(minor).$(patch)
 
 steps:
 - task: DotNetCoreCLI@2
@@ -18,11 +22,13 @@ steps:
   inputs:
     command: 'restore'
     projects: '**/*.csproj'
+
 - task: DotNetCoreCLI@2
   displayName: Building Solution
   inputs:
     projects: '**/*.csproj'
     arguments: '--configuration $(buildConfiguration)'
+
 - task: DotNetCoreCLI@2
   displayName: Executing Unit Testing
   inputs:
@@ -30,6 +36,7 @@ steps:
     projects: '**/*UnitTest/*.csproj'
     arguments: '--configuration $(buildConfiguration)'
     publishTestResults: true
+
 - task: DotNetCoreCLI@2
   displayName: Executing Integration Tests
   inputs:
@@ -44,7 +51,17 @@ steps:
     command: test
     projects: '**/*EndToEndTests/*.csproj'
     arguments: '--configuration $(buildConfiguration)'
-    publishTestResults: true    
+    publishTestResults: true   
+
+- task: DotNetCoreCLI@2
+  displayName: 'Zip Artifact to $(Build.ArtifactStagingDirectory)'
+  inputs:
+    command: 'publish'
+    publishWebProjects: false
+    zipAfterPublish: true
+    projects: 'src/**/*.WebApi.csproj'
+    arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory) -p:Version=$(buildVersion)'
+
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact'
   inputs:
