--- a/infrastructure-azure-pipeline.yml
+++ b/infrastructure-azure-pipeline.yml
@@ -22,7 +22,7 @@ steps:
     regionName: 'us-west-1'
     stackName: 'BlogWebApiCqrs'
     templateSource: 'url'
-    templateUrl: 'https://github.com/hack3rlife/aws-cloudfront-templates/blob/main/BeanStalkDotnetCoreApplication/dotnet-core-webapi.yml'
+    templateUrl: 'https://cf-templates-14k7ci0m6vv7i-us-west-1.s3.us-west-1.amazonaws.com/2022062owk-template11cxah8l4zmz'
     templateParametersSource: 'inline'
     templateParameters: |
       - ParameterKey: AppName
